# sj-android-billingclient

./: .gitignore  README.md  pyproject.toml
sjbillingclient/: __init__.py  utils.py
sjbillingclient/jclass/: accountidentifiers.py  acknowledge.py  billing.py  consume.py  productdetails.py  purchase.py  queryproduct.py  querypurchases.py
sjbillingclient/jinterface/: acknowledge.py  billing.py  product.py  purchases.py
sjbillingclient/tools/: __init__.py
