[tool.poetry]
name = "sjbillingclient"
version = "0.1.4"
description = ""
authors = ["Kenechukwu Akubue <kengoon19@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pyjnius = "^1.6.1"
poetry-core = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
